# agents-for-jobs

./: !LOGFILE!  .env.example  .gitignore  AGENT_BUILD_CONTEXT.md  AI_JOB_AGENT.cmd  AI_JOB_AGENT.ps1  AI_Job_Agent_Master_Specification.md  N8N_CREDENTIALS_SETUP.md  ONE_CLICK_DESKTOP_SETUP.cmd  ONE_CLICK_DESKTOP_SETUP.ps1  README.md  START_N8N.cmd  TASK_SPEC.md  agent  auto-download-required-files.ps1  env.text  env.text.local  find-node.cmd  load-env.cmd  logs.txt  n8n-job-agent-workflow.json  pyproject.toml  requirements-agent.txt  setup-n8n-credentials.cmd  setup-n8n-credentials.sh  test-launch.ps1  test.ps1  workflow 1 Configuration Loader.txt
config/: ai-models.json  notifications.json  portals.json  preferences.json  profile.json  profiles.json  workspace.json
n8n/: !LOGFILE!  job-application-agent.workflow.json
output/: AppliedJobs.csv
prompts/: application_prompt.md  cover_letter.md  interview.md  interview_prep.md  job_search_prompt.md  notification_message.md  resume_builder.md  resume_optimizer.md  system_prompt.md  validator.md
scripts/: add_candidate.py  build_n8n_workflows.py  build_runtime_context.py  check_setup.py  collect_jobs.py  ingest_resume.py  manage_users.py  run_full_pipeline.py  run_job_search.py  run_resume_generator.py  secret-transfer.ps1  serve_dashboard.py  start_n8n_local.cmd  validate_configs.py
tests/: test_ai_client.py  test_ai_integration.py  test_artifact_store.py  test_full_pipeline.py  test_job_search.py  test_resume_generator.py  test_resume_ingest.py
workflows/: orchestrator.json  wf00.json  wf01.json  wf02.json  (+6 more)
(+201 files in other folders)
