[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-job-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "openai>=1.40.0",
    "playwright>=1.50.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "requests>=2.32.0",
    "python-docx>=1.1.2",
    "reportlab>=4.2.2",
    "pypdf>=4.3.1",
    "pillow>=10.0.0",
    "twilio>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
